Lab 5. Created ProductCreationRequest and new methods