@@ -1,11 +1,16 @@
 package com.example.lab.product;
 
+import java.util.*;
+import java.util.function.*;
 import com.example.lab.categories.Categories;
 import com.example.lab.categories.CategoriesRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/rest/products")
@@ -15,30 +20,57 @@ public class ProductController {
     private final ProductService productService;
     private final CategoriesRepository categoriesRepository;
 
+
     @PostMapping("/add")
-    public Product addProduct(@RequestBody ProductRequest productRequest){
-        Categories category = categoriesRepository.findById(productRequest.categoryId())
-                .orElseThrow(() -> new RuntimeException("Category doesn't exist"));
+    @ResponseStatus(HttpStatus.CREATED)
+    public ProductDto createNewProduct(@RequestBody
+                                       @Validated ProductCreationRequest productCreationRequest){
+        Categories category;
+        Optional<Categories> optionalCategories = Optional.ofNullable(categoriesRepository.findByName(String.valueOf(productCreationRequest.getCategoryName())));
+        if (optionalCategories.isPresent()){
+            category = optionalCategories.get();
+        } else {
+            category = new Categories(String.valueOf(productCreationRequest.getCategoryName()), "Opis");
+            category = categoriesRepository.save(category);
+        }
+
         Product newProduct = new Product(
-                productRequest.title(),
-                productRequest.author(),
-                category,
-                productRequest.bookDescription(), productRequest.price()
+                productCreationRequest.getTitle(),
+                productCreationRequest.getAuthor(),
+                productCreationRequest.getCategoryName(),
+                productCreationRequest.getDescription(),
+                productCreationRequest.getPrice()
         );
-        return productService.saveProduct(newProduct);
+        Product savedProduct = productService.saveProduct(newProduct);
+    return productMapper.productDto(newProduct);
     }
 
     @GetMapping
     public List<ProductDto> getAllProducts(){
         return productService.findAllProducts()
                 .stream()
-                .map(product -> new ProductDto(
-                        product.getTitle(),
-                        product.getAuthor(),
-                        product.getBookCategory().getCategories_id(),
-                        product.getBook_description(),
-                        product.getPrice()))
-                .toList();
+                .map(productMapper::productDto)
+                .collect(Collectors.toList());
+    }
+
+    @GetMapping(params = {"/category"})
+    public List<ProductDto> getProductsByCategory(@RequestParam String category){
+        return productService.findAllProductsByCategory(category).stream()
+                .map(productMapper::productDto)
+                .collect(Collectors.toList());
+    }
+
+//    @GetMapping(params = {"categoryId"})
+//    public List<ProductDto> getProductsByCategoryId(@RequestParam Long categoryId) {
+//        return productService.findAllProductsByCategoryId(categoryId).stream()
+//                .map(productMapper::productDto)
+//                .collect(Collectors.toList());
+//    }
+    @GetMapping(params = {"bookId"})
+    public List<ProductDto> getProductsById(@RequestParam Long bookId){
+        return productService.findAllProductsById(bookId).stream()
+                .map(productMapper::productDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/category/{categoryName}")
